# midend

./: .gitignore  CMakeLists.txt  README.md  debug_test.cpp  midendConfig.cmake.in  xmake.lua
.github/workflows/: ci.yml
include/IR/: BasicBlock.h  Constant.h  Function.h  IRBuilder.h  IRPrinter.h  Instruction.h  Instructions.h  Module.h  Type.h  Value.h
include/IR/Instructions/: BinaryOps.h  MemoryOps.h  OtherOps.h  TerminatorOps.h
include/Pass/: Pass.h
include/Pass/Analysis/: AliasAnalysis.h  CallGraph.h  DominanceInfo.h  LoopInfo.h  MemorySSA.h  RegionInfo.h  ScalarEvolution.h
include/Pass/Transform/: ADCEPass.h  ComptimePass.h  ConstantPropagationPass.h  GEPToByteOffsetPass.h  GVNPass.h  InlinePass.h  InstCombinePass.h  LICMPass.h  Mem2RegPass.h  SimplifyCFGPass.h  StoreGlobalize.h  StrengthReductionPass.h  TailRecursionOptimizationPass.h
include/Support/: Casting.h  ErrorHandling.h  Logger.h
src/IR/: BasicBlock.cpp  Constant.cpp  Function.cpp  IRPrinter.cpp  Instruction.cpp  Module.cpp  Type.cpp  Value.cpp
src/IR/Instructions/: BinaryOps.cpp  MemoryOps.cpp  OtherOps.cpp  TerminatorOps.cpp
src/Pass/: Pass.cpp
src/Pass/Analysis/: AliasAnalysis.cpp  CallGraph.cpp  DominanceInfo.cpp  LoopInfo.cpp  MemorySSA.cpp  RegionInfo.cpp  ScalarEvolution.cpp
src/Pass/Transform/: ADCEPass.cpp  ComptimePass.cpp  ConstantPropagationPass.cpp  GEPToByteOffsetPass.cpp  GVNPass.cpp  InlinePass.cpp  InstCombinePass.cpp  LICMPass.cpp  Mem2RegPass.cpp  SimplifyCFGPass.cpp  StoreGlobalize.cpp  StrengthReductionPass.cpp  TailRecursionOptimizationPass.cpp
src/Support/: Logger.cpp
tests/: CMakeLists.txt  xmake.lua
tests/IR/: ArrayInitializationTest.cpp  BasicBlockTest.cpp  ConstantTest.cpp  FunctionTest.cpp  IRBuilderTest.cpp  IRPrinterTest.cpp  InstructionTest.cpp  ModuleTest.cpp  MoveInstTest.cpp  OperatorTest.cpp  TypeTest.cpp  ValueTest.cpp
tests/Pass/: AnalysisManagerTest.cpp  AnalysisTest.cpp  PassBuilderTest.cpp  PassManagerTest.cpp  PassRegistryTest.cpp  PassTest.cpp
tests/Pass/Analysis/: AliasAnalysisTest.cpp  CallGraphTest.cpp  DominanceTest.cpp  LoopInfoTest.cpp  MemorySSATest.cpp  RegionInfoTest.cpp  SimplifyCFGTest.cpp
tests/Pass/Transform/: ADCETest.cpp  ComptimeTest.cpp  ConstantPropagationTest.cpp  GVNPassTest.cpp  InlinePassTest.cpp  InstCombinePassStoreLoadTest.cpp  InstCombineTest.cpp  LICMPassTest.cpp  Mem2RegTest.cpp  SimplifyCFGTest.cpp  StrengthReductionPassTest.cpp  TailRecursionOptimizationTest.cpp
